# jwm-settings-manager

./: .bintray.yml  .bzrignore  .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TODO  bintray.json  cmake_install.cmake  jwm-settings-manager  jwm-settings-manager-common.install  jwm-settings-manager.1  make_appimage.sh  maketranslation
cmake/modules/: FindFontconfig.cmake
data/: .jwmrc  CMakeLists.txt  CMakeLists.txt~  Makefile  bitmap.desktop  changewallpaper.sh  cmake_install.cmake  dekstop-file-editor.desktop  gnomeapps  gnomesystem  indicators.list  jwm-desktopmenu  jwm-placesmenu  jwm-settings-manager  jwm-settings-manager-autostart.desktop  jwm-settings-manager-desktop.desktop  jwm-settings-manager-fonts.desktop  jwm-settings-manager-icons.desktop  jwm-settings-manager-keyboard.desktop  jwm-settings-manager-mouse.desktop  jwm-settings-manager-panel.desktop  jwm-settings-manager-themes.desktop  jwm-settings-manager-window.desktop  jwm-settings-manager.desktop  jwm-settings-manager.desktop.in  jwmIconFinder  jwmIconFinder~  live.jwmrc  live.jwmrc.in  live.jwmrc~  nice-start  nice-start~  pb_JWM  places  places~  reconfigure_jwm_themes  rox.desktop  time  toriOSmenu  toriOSmenu~  (+6 more)
data/Buttons/BoxShaped/: close.xbm  desk.xbm  iconify.xbm  max.xbm  max_toggled.xbm
data/Buttons/CircleShaped/: close.xbm  desk.xbm  iconify.xbm  max.xbm  max_toggled.xbm
data/Buttons/Default/: menu.xbm
data/desktop-directories/: jwm-education.directory  jwm-home.directory  jwm-home.directory~
data/desktop-file-editor/: help-desktop-file-editor-en_US
data/icons/: desktop.xpm  icons.xpm  jsm-autostart.xpm  jsm-desktop.xpm  jsm-fonts.xpm  jsm-icons.xpm  jsm-keyboard.xpm  jsm-mouse.xpm  jsm-panel.xpm  jsm-theme.xpm  jsm-windows.xpm  jwm-settings-manager.xpm  jwm-settings-manager.xpm~  mouse.xpm  panel.xpm  theme.xpm
data/img/: flAdduser.xpm  jwm-settings-manager.xpm
data/themes/: CMakeLists.txt  CMakeLists.txt~  Makefile  all-2.3.2+themes.in  all-2.3.2+themes.in~  all-new-themes.in  all-new-themes.in~  all-old-themes.in  all-old-themes.in~  cmake_install.cmake  live.jwmrc.in  live.jwmrc.in~
data/themes/2.3.0/Ambiance/: Ambiance
data/themes/2.3.0/Bassem/: Bassem
data/themes/2.3.0/DarkGnome2/: DarkGnome2
data/themes/2.3.0/Default/: Default
data/themes/2.3.0/LightGnome2/: LightGnome2
data/themes/2.3.0/Numix/: Numix
data/themes/Ambiance/: Ambiance  Ambiance.in  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
data/themes/Ambiance/Buttons/: max.xbm  max_toggled.xbm  shade.xbm
data/themes/Bassem/: Bassem  Bassem.in  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
data/themes/DarkGnome2/: CMakeLists.txt  CMakeLists.txt~  DarkGnome2  DarkGnome2.in  Makefile  cmake_install.cmake
data/themes/Default/: CMakeLists.txt  CMakeLists.txt~  Default  Default.in  Default~  Makefile  cmake_install.cmake
data/themes/Default/Buttons/: close.xbm  desk.xbm  iconify.xbm
data/themes/LightGnome2/: CMakeLists.txt  CMakeLists.txt~  LightGnome2  LightGnome2.in  Makefile  cmake_install.cmake
data/themes/Numix/: CMakeLists.txt  CMakeLists.txt~  Makefile  Numix  cmake_install.cmake
data/themes/old/: all-old-themes.in
data/themes/old/Ambiance/: Ambiance  Ambiance.in
data/themes/old/Bassem/: Bassem  Bassem.in
data/themes/old/DarkGnome2/: DarkGnome2  DarkGnome2.in
data/themes/old/Default/: Default  Default.in
data/themes/old/LightGnome2/: LightGnome2  LightGnome2.in
data/themes/old/Numix/: Numix
debian/: changelog  changelog~  control  control.in  copyright  jwm-settings-manager-common.install  jwm-settings-manager-common.install.in  jwm-settings-manager-common.install.in~  jwm-settings-manager.1.in  jwm-settings-manager.install  menu  postinst
fltk/: desktop-file-editor.cxx  desktop-file-editor.fld  desktop-file-editor.h  jwm-autostart.cxx  jwm-autostart.fld  jwm-autostart.h  jwm-desktop.cxx  jwm-desktop.fld  jwm-desktop.h  jwm-fonts.cxx  jwm-fonts.fld  jwm-fonts.h  jwm-icons.cxx  jwm-icons.fld  jwm-icons.h  jwm-keyboard.cxx  jwm-keyboard.fld  jwm-keyboard.h  jwm-menu.cxx  jwm-menu.fld  jwm-menu.fld~  jwm-menu.h  jwm-mouse.cxx  jwm-mouse.fld  jwm-mouse.h  jwm-panel.cxx  jwm-panel.fld  jwm-panel.fld~  jwm-panel.h  jwm-popups.cxx  jwm-popups.fld  jwm-popups.h  jwm-settings.cxx  jwm-settings.fld  jwm-settings.h  jwm-shutdown.cxx  jwm-shutdown.fld  jwm-shutdown.h  jwm-themes.cxx  jwm-themes.fld  (+9 more)
fltk/custom_buttons/: gear.xbm  minus
include/: Apps.h  Config.h  FL_Font_Chooser.h  MulitPanel.h  autostart.hpp  common.hpp  desktop.hpp  flAutostart.h  flDesktop.h  flFont.h  flIcons.h  flKeyboard.h  flMouse.h  flPanel.h  flThemes.h  flWindow.h  fltkfunctions.hpp  fonts.hpp  icons.hpp  jwmrc.h  jwmrc.hpp  keyboard.hpp  menu.hpp  nanosvg.h  panel.hpp  svg.h  themes.hpp  ui.h  ui.hpp  window.hpp
po/: es.po  fr.po  gettextline  jwm-settings-manager.po  jwm-settings-manager.pot  messages.pot  ms.po
src/: Apps.cpp  Config.cpp  FL_Font_Chooser.cpp  MulitPanel.cpp  autostart.cpp  common.cpp  desktop.cpp  flAutostart.cpp  flDesktop.cpp  flFont.cpp  flIcons.cpp  flKeyboard.cpp  flMouse.cpp  flPanel.cpp  flThemes.cpp  flWindow.cpp  fltkfunctions.cpp  fonts.cpp  icons.cpp  jsm.cpp  jsm.cpp.in  jwm.cpp  jwmrc.cpp  keyboard.cpp  menu  menu.cpp  menu2  menu2.cpp  menuXDG.cxx  panel.cpp  places  places.cpp  svg.cpp  themes.cpp  tinyxml2.cpp  ui.cpp  uikeyboard.cpp  window.cpp
usr/share/locale/es/LC_MESSAGES/: jwm-settings-manager.mo
usr/share/locale/fr/LC_MESSAGES/: jwm-settings-manager.mo
usr/share/locale/ms/LC_MESSAGES/: jwm-settings-manager.mo
usr/share/metainfo/: jwm-settings-manager.appdata.xml
usr/share/polkit-1/actions/: org.freedesktop.policykit.desktop-file-editor.policy
